Fix collapse menu problem #3

--- a/recipe_box/static/styles/style.css
+++ b/recipe_box/static/styles/style.css
@@ -12,7 +12,14 @@ body {
 /* Navigation Bar */
 .navbar {
     background: #e2efe7; 
-    height: 130px;  
+    margin: 0;
+    padding: 8;
+}
+
+
+/* Logo */
+.navbar-brand{
+    padding: 0;
 }
 
 
@@ -22,20 +29,20 @@ body {
     font-size: 22px;
     padding: 5px;
     margin-left: 15px;
-    margin-right: 15px;
-   
+    margin-right: 15px;   
 }
 
 .nav-link,
 .navbar button {
     color: #809bce;
-    cursor: pointer;
+
 }
 
 .navbar button{
     height: 50px;
     font-size: 20px;
     padding: 10px;
+    cursor: pointer;
 
     background: rgba(184, 216, 205, 0.5); 
 }
@@ -75,8 +82,6 @@ body {
     background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(69, 108, 180, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-
-
 
 
 
